# BlackBox-1

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
Bcore/: build.gradle
Bcore/black-fake/: build.gradle
Bcore/black-hook/: build.gradle
Bcore/libs/: free_reflection-3.0.1.aar
Bcore/pine-core/: build.gradle
Bcore/pine-core/src/main/cpp/: CMakeLists.txt
Bcore/pine-core/src/main/cpp/art/: jit.cpp
Bcore/pine-core/src/main/cpp/trampoline/: trampoline_installer.h
Bcore/pine-core/src/main/cpp/utils/: memory.cpp  scoped_local_ref.h
Bcore/pine-xposed/: build.gradle
Bcore/pine-xposed-res/: build.gradle
Bcore/pine-xposed-res/src/main/: AndroidManifest.xml
Bcore/src/main/: AndroidManifest.xml
Bcore/src/main/cpp/: CMakeLists.txt
Bcore/src/main/java/top/niunaijun/blackbox/fake/frameworks/: BlackManager.java
Bcore/src/main/java/top/niunaijun/blackbox/fake/service/: HCallbackProxy.java
android-mirror/: build.gradle
app/: build.gradle
app/libs/: StateView-v3.0.1.aar  catloadinglibrary-1.0.9.aar  floatingview-1.6.aar
app/src/main/: AndroidManifest.xml
app/src/main/java/top/niunaijun/blackboxa/app/rocker/: BaseActivityLifecycleCallback.kt  RockerManager.kt
app/src/main/java/top/niunaijun/blackboxa/data/: XpRepository.kt
app/src/main/java/top/niunaijun/blackboxa/view/apps/: AppsFactory.kt
app/src/main/java/top/niunaijun/blackboxa/view/fake/: FakeLocationFactory.kt  FakeManagerActivity.kt
app/src/main/java/top/niunaijun/blackboxa/view/gms/: GmsFactory.kt
app/src/main/java/top/niunaijun/blackboxa/view/list/: ListFactory.kt
app/src/main/java/top/niunaijun/blackboxa/view/main/: MainActivity.kt  WelcomeActivity.kt
app/src/main/java/top/niunaijun/blackboxa/view/xp/: XpFactory.kt
gradle/wrapper/: gradle-wrapper.properties
